last part of jenkins article finished